--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 function checkform(){
     if(document.getElementById("un").value == 'kipling'){
         alert("Login Successful");
-        window.location = "http://www.google.com/"
+        window.location = "bday/page1.html"
     }else{
         alert("Access denied. Valid answer is required.");
     }
