--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@ function check(oForm)
 	}
 	else if (guess=="kipling")
 	{
-		alert ("Correct!");
-		window.location = "http://www.yahoo.com";
+		window.location.href = "http://www.yahoo.com";
 	}
 	else
 	{
 		alert ("Incorrect");
-		window.location= "http://www.google.com";
+		window.location.href = "http://www.google.com";
 	}
 }
 </script>
