--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ function check(oForm)
 	}
 	else if (guess=="kipling")
 	{
-		window.location.href = "http://www.yahoo.com";
+		window.location.href = "bday/page1.html";
 	}
 	else
 	{
