--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ function check(oForm)
 	}
 	else if (guess=="kipling")
 	{
-		window.location.href = "bday/page1.html";
+		alert ("Correct");
+		window.location.href = "https://sne-ha.github.io/page1/";
 	}
 	else
 	{
