--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ function check(oForm)
 	else if (guess=="kipling")
 	{
 		alert ("Correct");
-		window.location.href = "https://sne-ha.github.io/page1/";
+		window.location.href = "https://sne-ha.github.io/page1.html";
 	}
 	else
 	{
