--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ function check(oForm)
 	else if (guess=="kipling")
 	{
 		alert ("Correct");
-		window.location.href = "http://www.google.com";
+		window.location.href = "http://www.yahoo.com";
 	}
 	else
 	{
